Evaluation metric for reco sys - RMSE & MAE

--- a/05_eval_prediction_accuracy_RS.ipynb
+++ b/05_eval_prediction_accuracy_RS.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "Text(0.5,1,'Average movie rating - TEST data')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -442,14 +442,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "unique users in Test QUERY dataset :  181\n",
+      "Unique users in Test QUERY dataset :  181\n",
+      "Unique users in Train PROBE dataset :  862\n",
       "#Rows in QUERY, PROBE and Train PROBE datasets : \n",
       "543\n",
       "54727\n",
@@ -473,7 +474,8 @@
     "\n",
     "ratings_train_probe = ratings_train.append(ratings_test_probe)\n",
     "\n",
-    "print \"unique users in Test QUERY dataset : \", ratings_test_query['userId'].nunique()\n",
+    "print \"Unique users in Test QUERY dataset : \", ratings_test_query['userId'].nunique()\n",
+    "print \"Unique users in Train PROBE dataset : \", ratings_train_probe['userId'].nunique()\n",
     "print \"#Rows in QUERY, PROBE and Train PROBE datasets : \"\n",
     "print ratings_test_query.shape[0]\n",
     "print ratings_test_probe.shape[0]\n",
